syntax = "proto2";
package eos.auth;

import "XrdOucErrInfo.proto";

//------------------------------------------------------------------------------
// Response object received from the server for most of the requests
//------------------------------------------------------------------------------
message ResponseProto {
  required int64 response = 1;
  optional bytes message = 2;
  optional XrdOucErrInfoProto error = 3;
  optional bool  collapse = 4;
}

